--- a/public/css/feelrank.css
+++ b/public/css/feelrank.css
@@ -56,12 +56,16 @@ a:hover {
 
 /***PANELS***/
 
-.panel-slide {
-	height: 100%;
+#panel-profile {
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 
-.scotch-panel-wrapper {
-	height: 100%;
+#panel-nav {
+	position: fixed;
+	top: 0;
+	right: 0;
 }
 
 /***HOME***/
