--- a/public/css/feelrank.css
+++ b/public/css/feelrank.css
@@ -56,16 +56,22 @@ a:hover {
 
 /***PANELS***/
 
-#panel-profile {
+#panel-profile-content {
 	position: fixed;
 	top: 0;
 	left: 0;
+	width: 300px;
+	height: 100%;
+	background-color: #333;
 }
 
-#panel-nav {
+#panel-nav-content {
 	position: fixed;
 	top: 0;
 	right: 0;
+	width: 300px;
+	height: 100%;
+	background-color: #333;
 }
 
 /***HOME***/
