--- a/public/css/feelrank.css
+++ b/public/css/feelrank.css
@@ -34,13 +34,13 @@ a:hover {
 .navbar .btn-default {
 	color: #fff;
 	background-color: #f8694d;
-	border-color: #fff;
+	border: 1px solid #fff;
 }
 
 .navbar .btn-default:hover, .navbar .btn-default:focus {
 	color: #fff;
 	background-color: #f8694d;
-	border-color: #fff;
+	border: 1px solid #fff;
 }
 
 .btn-default {
@@ -61,6 +61,7 @@ a:hover {
 
 .navbar .dropdown-menu a {
 	color: #000 !important;
+	text-decoration: none !important;
 }
 
 .navbar .dropdown-menu a:hover {
@@ -68,26 +69,12 @@ a:hover {
 }
 
 .navbar ul.nav li.active a {
-	background: rgb(248,105,77); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(248,105,77,1) 10%, rgba(255,255,255,1) 50%, rgba(248,105,77,1) 90%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(10%,rgba(248,105,77,1)), color-stop(50%,rgba(255,255,255,1)), color-stop(90%,rgba(248,105,77,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(248,105,77,1) 10%,rgba(255,255,255,1) 50%,rgba(248,105,77,1) 90%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(248,105,77,1) 10%,rgba(255,255,255,1) 50%,rgba(248,105,77,1) 90%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(248,105,77,1) 10%,rgba(255,255,255,1) 50%,rgba(248,105,77,1) 90%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(248,105,77,1) 10%,rgba(255,255,255,1) 50%,rgba(248,105,77,1) 90%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+	text-decoration: underline;
 }
 
 .navbar ul.nav li.open > a {
-	background: rgb(248,105,77); /* Old browsers */
-	background: -moz-linear-gradient(top,  rgba(248,105,77,1) 10%, rgba(255,255,255,1) 50%, rgba(248,105,77,1) 90%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(10%,rgba(248,105,77,1)), color-stop(50%,rgba(255,255,255,1)), color-stop(90%,rgba(248,105,77,1))); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  rgba(248,105,77,1) 10%,rgba(255,255,255,1) 50%,rgba(248,105,77,1) 90%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  rgba(248,105,77,1) 10%,rgba(255,255,255,1) 50%,rgba(248,105,77,1) 90%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  rgba(248,105,77,1) 10%,rgba(255,255,255,1) 50%,rgba(248,105,77,1) 90%); /* IE10+ */
-	background: linear-gradient(to bottom,  rgba(248,105,77,1) 10%,rgba(255,255,255,1) 50%,rgba(248,105,77,1) 90%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
-}
+	text-decoration: underline;
+}	
 
 .navbar {
 	box-shadow: none;
