Added padding to scotch panel wrapper, which was overtaking body and overriding original padding.

--- a/public/css/feelrank.css
+++ b/public/css/feelrank.css
@@ -109,6 +109,7 @@ a:hover {
 
 div.scotch-panel-wrapper {
 	overflow: visible !important;
+	padding-bottom: 50px;
 }
 
 #panel-profile, #panel-nav {
