--- a/public/css/feelrank-card.css
+++ b/public/css/feelrank-card.css
@@ -19,6 +19,7 @@
 /* hide back of pane during swap */
 .card-front, .card-back {
 	backface-visibility: hidden;
+	width: 100%;
 }
 
 /* front pane, placed above back */
